--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Devfest Environment Setup : How to set up your Programming Environment" />
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Devfest Environment Setup by squidarth</title>
+    <title>Devfest Environment Setup</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>Devfest Environment Setup</h1>
-        <h2>How to set up your Programming Environment</h2>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/squidarth/environment-setup">View on GitHub</a>
 
-        <section id="downloads">
-          <a href="https://github.com/squidarth/environment-setup/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/squidarth/environment-setup/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/squidarth/environment-setup" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+          <h1 id="project_title">Devfest Environment Setup</h1>
+          <h2 id="project_tagline">How to set up your Programming Environment</h2>
 
-    <div class="container">
-      <section id="main_content">
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/squidarth/environment-setup/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/squidarth/environment-setup/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="devfest-environment-setup" class="anchor" href="#devfest-environment-setup"><span class="octicon octicon-link"></span></a>Devfest Environment Setup</h1>
 
@@ -209,6 +212,15 @@ long.</p>
       </section>
     </div>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Devfest Environment Setup maintained by <a href="https://github.com/squidarth">squidarth</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
